--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>LEEP | Catálogo</title>
+  <title>LEEP Import S.R.L | Pedidos</title>
   <meta name="description" content="Seleccioná categoría, color y cantidad. Armamos tu consulta automáticamente y la enviás por WhatsApp." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
