--- a/index.html
+++ b/index.html
@@ -105,8 +105,9 @@
   </main>
 
   <footer class="footer">
-    <p>© <span id="year"></span> LEEP</p>
-    <a href="assets/catalogo.pdf" download>Descargar catálogo (PDF)</a>
+    <p>© <span id="year"></span> T-Laser</p>
+    <!-- <a href="assets/catalogo.pdf" download>Descargar catálogo (PDF)</a> -->
+    
   </footer>
 
   <script src="js/app.js"></script>
